fix: add letter-spacing  rule to button

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -19,6 +19,7 @@
   text-align: center;
   text-decoration: none;
   transition: all 300ms ease-out;
+  letter-spacing: core.$letter-spacing;
 
   *,
   *::before,
